Fix bg overflowX issue on mobile

--- a/client/src/main/styles/styles.css
+++ b/client/src/main/styles/styles.css
@@ -26,7 +26,7 @@ html {
     margin: 0 !important;
     padding: 0;
     /* font-family: "Helvetica", sans-serif; */
-    width: 100%;
+    /* width: 100%; */
     width: 100vw;
     overflow-x: hidden;
     display: flex;
